# mofa-studio

./: Cargo.toml  DEPLOY_WITH_NIX.md  flake.nix  setup-english-learning.ps1
apps/colang/: Cargo.toml  DOUBAO_API_SETUP.md  ENGLISH_LEARNING_README.md  IMPLEMENTATION_CHECKLIST.md  LEARNING_DB_REFACTORING.md  REFACTORING_SUMMARY.md  USER_INPUT_CONTROL.md  USER_INPUT_WAIT_VERIFICATION.md  WAIT_FOR_USER_QUICKREF.md  WAIT_FOR_USER_UPDATE.md  ai.md  seed_data.sql  经历.md
apps/colang/dataflow/: english-learning.yml  english_teacher_config.toml  learning-graph.1.html  learning-graph.html  learning.yml  learning2.yml  learning_companion.db  maas_config.toml  study-chat-graph.html  study-chat.yml  study_config_myself.toml  study_config_techer.toml  voice-chat copy.yml  voice-chat-test.yml  voice-chat.yml
apps/colang/dataflow/fake_nodes/: __init__.py  fake_bridge.py  fake_conference_controller.py  fake_llm.py  fake_text_segmenter.py  fake_tts.py
apps/colang/migrations/: 001_create_tables.sql  002_add_chinese_descriptions.sql
apps/colang/src/: audio_player.rs  database.rs  dora_integration.rs  doubao_api.rs  lib.rs  mofa_hero.rs  screen.rs
apps/colang/src/screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs
apps/mofa-fm/dataflow/: voice-chat-graph.html  voice-chat.yml
apps/mofa-fm/src/: audio_player.rs
mofa-dora-bridge/src/: dispatcher.rs  lib.rs  parser.rs
mofa-dora-bridge/src/widgets/: audio_player.rs  mod.rs  prompt_input.rs  system_log.rs
mofa-studio-shell/src/: app.rs
mofa-studio-shell/src/widgets/: sidebar.rs
mofa-widgets/src/: participant_panel.rs
node-hub/dora-conversation-analyzer/: Cargo.toml
node-hub/dora-conversation-analyzer/src/: main.rs
node-hub/dora-doubao-asr/: Cargo.toml
node-hub/dora-doubao-asr/src/: main.rs
node-hub/dora-doubao-tts/: Cargo.toml
node-hub/dora-doubao-tts/src/: main.rs
node-hub/dora-english-teacher/: Cargo.toml
node-hub/dora-grammar-checker/: Cargo.toml
node-hub/dora-history-db-writer/: Cargo.toml
node-hub/dora-history-db-writer/src/: main.rs
node-hub/dora-learning-db-reader/: Cargo.toml
node-hub/dora-learning-db-reader/src/: main.rs
node-hub/dora-learning-db-writer/: Cargo.toml
node-hub/dora-session-context/: Cargo.toml
node-hub/dora-session-context/src/: main.rs
node-hub/dora-session-controller/: Cargo.toml
node-hub/dora-topic-generator/: Cargo.toml
node-hub/dora-topic-generator/src/: main.rs
node-hub/dora-word-selector/: Cargo.toml
node-hub/dora-word-selector/src/: main.rs
rust-nodes/dora-conversation-analyzer/: Cargo.toml
rust-nodes/dora-conversation-analyzer/src/: main.rs
rust-nodes/dora-doubao-asr/src/: main.rs
rust-nodes/dora-doubao-tts/: Cargo.toml
rust-nodes/dora-doubao-tts/src/: main.rs
rust-nodes/dora-english-teacher/src/: main.rs  main_old.rs
rust-nodes/dora-grammar-checker/: Cargo.toml
rust-nodes/dora-grammar-checker/src/: main.rs
rust-nodes/dora-history-db-writer/: Cargo.toml
rust-nodes/dora-history-db-writer/src/: main.rs
rust-nodes/dora-learning-db-reader/src/: main.rs
rust-nodes/dora-learning-db-writer/src/: main.rs  main_old.rs
rust-nodes/dora-topic-generator/: Cargo.toml
rust-nodes/dora-topic-generator/src/: main.rs
rust-nodes/dora-word-selector/: Cargo.toml
rust-nodes/dora-word-selector/src/: main.rs
