[package]
name = "dora-doubao-asr"
version = "0.1.0"
edition = "2021"
description = "Dora node for Doubao ASR (speech-to-text) using Volcanic Engine API"

[workspace]

[dependencies]
dora-node-api = "0.3"
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
