[package]
name = "dora-english-teacher"
version = "0.1.0"
edition = "2021"
description = "Dora node for AI English teacher conversation using Doubao API"

[dependencies]
dora-node-api = { git = "https://github.com/dora-rs/dora.git", tag = "v0.3.6" }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
