[package]
name = "dora-learning-db-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = { git = "https://github.com/dora-rs/dora.git", tag = "v0.3.6" }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
