[package]
name = "dora-word-selector"
version = "0.1.0"
edition = "2021"

[dependencies]
dora-node-api = "0.3"
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4", "serde"] }
