[package]
name = "dora-grammar-checker"
version.workspace = true
edition.workspace = true
description = "Dora node for grammar and vocabulary analysis using Doubao AI API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
uuid.workspace = true
