[package]
name = "dora-history-db-writer"
version.workspace = true
edition.workspace = true
description = "Dora node for saving conversation history to SQLite database"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sqlx.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
